# fantaosha_iLQG

src/: CMakeLists.txt  car.cpp  car_ddp.cpp  quadrotor.cpp  quadrotor_ddp.cpp  quadrotor_ddp_est.cpp  quadrotor_ilqg.cpp  quadrotor_lqr.cpp  test.cpp  test_boxQP.cc
src/headers/: boxQP.hpp  car.hpp  ddp.hpp  ddp.hpp.bak  ilqg.hpp  liegroup.hpp  lqr.hpp  quadcost.hpp  quadrotor.hpp  quadrotor.hpp.bak  simulator.hpp  snOPT.hpp  snoptProblem.hpp  tassa_car.hpp  type.hpp  urdf_robot.cpp
